--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   mysql_client: ^0.0.27
   dio: ^5.8.0+1
   equatable: ^2.0.7
-  mysql1: ^0.20.0
+  mysql1: 0.20.0
 
 dev_dependencies:
   flutter_test:
